# bulkinvoicer

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  sample.config.toml  sample.xlsx
.github/scripts/: get_release_notes.py  update_changelog.py
.github/workflows/: lint.yml  publish.yml  release.yml  test.yml
bulkinvoicer/: __init__.py  __main__.py  cli.py  config.py  data_io.py  driver.py  invoice.py  logging-debug.conf  pdf.py  prepare.py  utils.py
bulkinvoicer/app/: cli.py  generate.py  logging.conf
bulkinvoicer/config/: loader.py  model.py
bulkinvoicer/domain/: balances.py  matching.py  periods.py  prepare.py  summaries.py  transactions.py
bulkinvoicer/io/: excel.py  files.py
bulkinvoicer/pdf/: renderer.py
bulkinvoicer/services/: workers.py
examples/: sample.config.toml  sample.xlsx
tests/domain/: test_matching.py  test_periods.py  test_transactions.py
